Updates for new java version